# simple-rust-file-transmission

./: Cargo.toml  README.md
simple-rust-file-transmission/: Cargo.toml
simple-rust-file-transmission/src/: main.rs
src/: main.rs
