[package]
name = "rft"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3  # Optimize for size, but also turn off loop vectorization.
lto = true
strip = true

[dependencies]
#easytcp = { git = "https://github.com/cs97/rust-easytcp", features = ["tcp_openssl"] }
easytcp = { git = "https://github.com/cs97/rust-easytcp", features = ["tcp_aes_cbc"] }